--- a/pages/Rate/Rate/Rate.html
+++ b/pages/Rate/Rate/Rate.html
@@ -75,6 +75,10 @@
           </li>
         </ul>
       </div>
+      <div class="form-inline">
+        <input id="searchbar" class="form-control mr-sm-2" type="text" placeholder="Search">
+        <button class="btn btn-outline-secondary my-2 my-sm-0" onclick="search()">Search</button>
+      </div>
     </nav>
     <!--End Navbar-->
     <br />
